--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CSE247-s17-Bae-423311</name>
+	<name>CSE247-SP2017</name>
 	<comment></comment>
 	<projects>
 	</projects>
